src/objects/Project__c.object
<CustomObject>
    <description>used for tracking Sales Ops projects</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xactly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuoteQuickly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Service Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Process_Area__c</fullName>
        <label>Process Area</label>
        <picklist>
            <picklistValues>
                <fullName>Lead to Quote/CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote to Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Enablement/Onboarding</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Age__c</fullName>
        <formula>TODAY()  -   Project_Start_Date1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Go_Live_Date__c</fullName>
        <label>Project Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Milestones__c</fullName>
        <label>Project Milestones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test/QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch/Go Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date1__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run the Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Value__c</fullName>
        <label>Project Value</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enable New Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Application__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Project_Age__c</columns>
        <columns>Process_Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Phase__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Project_Phase__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>